# business-card-generator

./: .example.env  .flaskenv  .gitignore  .vercelignore  CHANGELOG.md  Pipfile  Procfile  README.md  app.json  mypy.ini  pyproject.toml  vercel.json
.github/workflows/: ci-cd.yml  cleanup.yml  lockfile.yml
business_card_generator/: __about__.py  api.py  app.py  asgi.py  card.py  settings.py  views.py
business_card_generator/templates/: _base.html  card.html  home.html
tasks/: __init__.py
tests/: conftest.py  test_api.py  test_app.py  test_asgi.py  test_settings.py  test_views.py  test_wsgi.py
