[project]
name = "business-card-generator"
description = "Generate digital business card as QR codes, using standard formats (vCard, MeCard)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
dynamic = ["version"]
requires-python = "==3.13.5"
dependencies = [
    "flask==3.1.1",
    "gunicorn==23.0.0",
    "honcho==2.0.0",
    "jinja2==3.1.6",
    "pydantic[email]==2.11.7",
    "pydantic-settings==2.10.1",
    "segno==1.6.6",
    "whitenoise==6.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/rclement/business-card-generator"
Issues = "https://github.com/rclement/business-card-generator/issues"
Changelog = "https://github.com/rclement/business-card-generator/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit==1.8.6",
    "faker==37.4.0",
    "invoke==2.2.0",
    "mypy==1.16.1",
    "pip-audit==2.9.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "python-dotenv==1.1.1",
    "ruff==0.12.4",
]

[tool.hatch.version]
path = "business_card_generator/__about__.py"