[project]
name = "business-card-generator"
description = "Generate digital business card as QR codes, using standard formats (vCard, MeCard)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" }
]
dynamic = ["version"]
requires-python = "==3.13.9"
dependencies = [
    "flask==3.1.2",
    "gunicorn==23.0.0",
    "honcho==2.0.0",
    "jinja2==3.1.6",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "segno==1.6.6",
    "whitenoise==6.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/rclement/business-card-generator"
Issues = "https://github.com/rclement/business-card-generator/issues"
Changelog = "https://github.com/rclement/business-card-generator/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "bandit==1.9.2",
    "faker==40.1.0",
    "invoke==2.2.1",
    "mypy==1.19.1",
    "pip-audit==2.10.0",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "python-dotenv==1.2.1",
    "ruff==0.14.10",
]

[tool.hatch.version]
path = "business_card_generator/__about__.py"